--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
     <title>Dean Warren's Page</title>
   </head>
   <body>
-    <div class="sticky-top">
-          <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-            <div class="container">
-              <a class="navbar-brand" href="#"><h1>Dean Warren</h1></a>
-            </div>
-          </nav>
-    </div>      
+    <!-- <div class="container row"> -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Dean Warren</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup"></div>
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="./contact.html">Contact</a>
+          </div>
+        </div>
+      </nav>
+    <!-- </div> -->
     <div class="container">
     </div>  
     <!-- Optional JavaScript -->
