--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         <div class="col-md-4"></div>
       </div>
     </div>  
+    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="bottom:0;">
+      <div class="container text-center">
+        <small>Copyright 2020 &copy; Dean Warren</small>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
