Sticky footer fixed.

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,40 @@
     <title>Contact Dean Warren</title>
   </head>
   <body>
-    <h1>Dean Warren</h1>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a href="#" class="navbar-brand">Dean Warren</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="main-navigation">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="./index.html" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="./portfolio.html" class="nav-link">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a href="./contact.html" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
+
+  <!-- Main Body -->
+  <div class="container py-4">
+
+  </div>
+
+  <!-- Footer -->
+  <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: absolute; bottom: 0; width: 100%;">
+    <div class="container text-center">
+      <span class="border-top-0"></span>
+      <small>Copyright 2020 &copy; Dean Warren</small>
+    </div>
+  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
