Portfoloio images added.

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">Dean Warren</a>
+    <a href="#" class="navbar-brand"><h2>Dean Warren</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
