--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a href="#" class="navbar-brand">Dean Warren</a>
+      <div class="d-inline p-2 bg-dark text-white"></div> 
+      <a href="#" class="navbar-brand"><h2>Dean Warren</h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +60,7 @@
     </div>  
     
     <!-- Footer -->
-    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: absolute; bottom: 0; width: 100%;">
+    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: relative; bottom: 0; width: 100%;">
       <div class="container text-center">
         <span class="border-top-0"></span>
         <small>Copyright 2020 &copy; Dean Warren</small>
