--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a href="#" class="navbar-brand">Dean Warren</a>
+      <a href="#" class="navbar-brand"><h2>Dean Warren</h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,12 +34,60 @@
 
 
     <!-- Main Body -->
-    <div class="container py-4">
-
-    </div>
+    
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-xs-8">
+            <div class="m-3 card">
+              <div class="card-header"><h4>Portfolio</h4></div>
+                <div class="card-body bg-light">
+                  <!-- 1st  row -->
+                  <div class="row">
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/IrelandTreeCathi.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/lastdaysofireland2015 311.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
+                    </div>
+                  </div>
+                  <!-- 2nd row -->
+                  <div class="row">
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/ItalyCow052.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Cow with Cross in the background">
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/Ireland_bathouse.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Old Irish Guardhouse">
+                    </div>
+                  </div>
+                  <!-- 3rd row -->
+                  <div class="row">
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/IrelandFence.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./Assets/Images/IrelandBurialMound.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Irish Burial Mound">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-3"></div>
+          <span class="border-bottom"></span>
+        </div>
+        <div class="row">
+          <div class="col-md-8">
+            <div class="media">
+              <div class="media-body"></div>
+            </div>
+          </div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>  
+    
 
     <!-- Footer -->
-    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: absolute; bottom: 0; width: 100%;">
+    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: relative; bottom: 0; width: 100%;">
       <div class="container text-center">
         <span class="border-top-0"></span>
         <small>Copyright 2020 &copy; Dean Warren</small>
