Portfolio Page complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,29 +43,36 @@
                 <div class="card-body bg-light">
                   <!-- 1st  row -->
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="mb-3 col-md-6">
+                      
                       <img src="./Assets/Images/IrelandTreeCathi.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
+                      <span class="d-block p-1 rounded bg-dark text-white">Password Generator</span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/lastdaysofireland2015 311.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
+                      <span class="d-block p-1 rounded bg-dark text-white">Rock, Paper, Scissors Game</span>
                     </div>
                   </div>
                   <!-- 2nd row -->
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="mb-3 col-md-6">
                       <img src="./Assets/Images/ItalyCow052.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Cow with Cross in the background">
+                      <span class="d-block p-1 rounded bg-dark text-white">Word Guess</span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/Ireland_bathouse.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Old Irish Guardhouse">
+                      <span class="d-block p-1 rounded bg-dark text-white">Trivia Game</span>
                     </div>
                   </div>
                   <!-- 3rd row -->
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="mb-3 col-md-6">
                       <img src="./Assets/Images/IrelandFence.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
+                      <span class="d-block p-1 rounded bg-dark text-white">Weather App</span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/IrelandBurialMound.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Irish Burial Mound">
+                      <span class="d-block p-1 rounded bg-dark text-white">Info Widget</span>
                     </div>
                   </div>
                 </div>
