--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
                   <div class="row">
                     <div class="mb-3 col-md-6">
                       
-                      <img src="./Assets/Images/IrelandTreeCathi.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
-                      <span class="d-block p-1 rounded bg-dark text-white">Password Generator</span>
+                      <img src="./Assets/Images/jspasswordgen.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/jspassword_generator/">Password Generator App</a></span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/lastdaysofireland2015 311.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
