added workday scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,12 @@
                   <!-- 1st  row -->
                   <div class="row">
                     <div class="mb-3 col-md-6">
-                      
                       <img src="./Assets/Images/jspasswordgen.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
                       <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/jspassword_generator/">Password Generator App</a></span>
                     </div>
                     <div class="col-md-6">
-                      <img src="./Assets/Images/lastdaysofireland2015 311.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
-                      <span class="d-block p-1 rounded bg-dark text-white">Rock, Paper, Scissors Game</span>
+                      <img src="./Assets/Images/05-third-party-apis-homework-demo.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/Work-DayScheduler/">Work Day Scheduler</a></span>
                     </div>
                   </div>
                   <!-- 2nd row -->
