--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>  
     
     <!-- Footer -->
-    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: relative; bottom: 0; width: 100%;">
+    <footer id="sticky-footer" class="py-2 bg-dark text-white-50" style="flex-shrink: none; position: absolute; bottom: 0; width: 100%;">
       <div class="container text-center">
         <span class="border-top-0"></span>
         <small>Copyright 2020 &copy; Dean Warren</small>
