added social link

--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,22 @@
   <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a href="./index.html" class="navbar-brand"><h2>Dean Warren</h2></a>
+    <div class="d-inline p-2 bg-dark text-white"></div> 
+    <a href="#" class="navbar-brand"><h2>Dean Warren</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="main-navigation">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/deawar">
+          <span class="fa fa-twitter" style="color:rgb(0, 153, 255);" ></span>
+        </a></i></li>
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/dean-warren-ab01468/">
+          <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);" ></span>
+        </a></i></li>
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
+          <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
+        </a></i></li>
         <li class="nav-item">
           <a href="./index.html" class="nav-link">About</a>
         </li>
