--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contact Dean Warren</title>
   </head>
   <body>
@@ -29,6 +29,9 @@
         <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
           <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
         </a></i></li>
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar">
+          <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
+        </a></i></li>
         <li class="nav-item">
           <a href="./index.html" class="nav-link">About</a>
         </li>
@@ -45,21 +48,16 @@
 
   <!-- Main Body -->
   <div class="container py-4">
-    <form>
-      <div class="form-group">
-        <label for="formGroupExampleInput">Your Name:</label>
-        <input type="text" class="form-control" id="formGroupNameInput" placeholder="Type in your name.">
+    <div class="jumbotron">
+      <div class="mx-auto">
+        <h1>Contact Dean Warren</h1>
       </div>
-      <div class="form-group">
-        <label for="EmailFormControlInput1">Email address:</label>
-        <input type="email" class="form-control" id="formGroupEmailInput" placeholder="name@example.com">
+      <div class="card-body mx-auto">
+        <a href="https://www.linkedin.com/in/dean-warren-ab01468/">LinkedIn</a> || <a href="https://www.github.com/deawar">GitHub</a> || <a href="https://www.twitter.com/deawar">Twitter</a> || <a href="https://www.reddit.com/user/deawar">Reddit</a>
+        <p class="card-text"><a href="mailto:deawar@gmail.com">DeaWar@gmail.com</a></p>
+        <a href="./Assets/Dean WarrenResumeApr20.pdf" class="btn btn-primary">Resume</a>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Message:</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-    </form>
-    <button type="button" class="btn btn-secondary btn-lg">Send Me a Message</button>
+    </div>
   </div>
 
   <!-- Footer -->
