--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -45,15 +45,15 @@
 
     <!-- Main Body -->
     
-      <div class="container py-4">
+      <div class="container py-4 mx-auto">
         <div class="row">
           <div class="col-xs-8">
-            <div class="m-3 card">
+            <div class="m-3 card mx-auto">
               <div class="card-header"><h4>Portfolio</h4></div>
-                <div class="card-body bg-light">
+                <div class="card-body bg-light mx-auto">
                   <!-- 1st  row -->
-                  <div class="row">
-                    <div class="mb-3 col-md-6">
+                  <div class="row mb-2">
+                    <div class="mb-4 col-md-6">
                       <img src="./Assets/Images/jspasswordgen.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
                       <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/jspassword_generator/">Password Generator App</a></span>
                     </div>
@@ -63,10 +63,10 @@
                     </div>
                   </div>
                   <!-- 2nd row -->
-                  <div class="row">
-                    <div class="mb-3 col-md-6">
-                      <img src="./Assets/Images/ItalyCow052.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Cow with Cross in the background">
-                      <span class="d-block p-1 rounded bg-dark text-white">Word Guess</span>
+                  <div class="row mb-2">
+                    <div class="mb-4 col-md-6">
+                      <img src="./Assets/Images/RainChk.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Cow with Cross in the background">
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://itsjonkelley.github.io/RainChk/">RainChk</a></span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/Ireland_bathouse.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Old Irish Guardhouse">
@@ -75,7 +75,7 @@
                   </div>
                   <!-- 3rd row -->
                   <div class="row">
-                    <div class="mb-3 col-md-6">
+                    <div class="mb-4 col-md-6">
                       <img src="./Assets/Images/06-server-side-apis-homework-demo.png" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
                       <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/MultiCityWeather/">Weather Dashboard App</a></span>
                     </div>
