--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
           <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
             <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
           </a></i></li>
+          <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar">
+            <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
+          </a></i></li>
           <li class="nav-item">
             <a href="./index.html" class="nav-link">About</a>
           </li>
