--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./sticky-footer.css">
     <title>Contact Dean Warren</title>
   </head>
   <body>
@@ -47,16 +48,21 @@
 
 
   <!-- Main Body -->
-  <div class="container py-4">
-    <div class="jumbotron">
-      <div class="mx-auto">
-        <h1>Contact Dean Warren</h1>
-      </div>
-      <div class="card-body mx-auto">
-        <a href="https://www.linkedin.com/in/dean-warren-ab01468/">LinkedIn</a> || <a href="https://www.github.com/deawar">GitHub</a> || <a href="https://www.twitter.com/deawar">Twitter</a> || <a href="https://www.reddit.com/user/deawar">Reddit</a>
-        <p class="card-text"><a href="mailto:deawar@gmail.com">DeaWar@gmail.com</a></p>
-        <a href="./Assets/Dean WarrenResumeApr20.pdf" class="btn btn-primary">Resume</a>
-      </div>
+  <div class="jumbotron">
+    <div class="container" >
+      <div class="row">
+        <div class="col-sm-6 btn-holder">
+          
+        </div>
+        <div class="card-body">
+          <h1 class="text-light">Contact Dean Warren</h1>
+          <div class="text-light">
+          <a href="https://www.linkedin.com/in/dean-warren-ab01468/" class="text-light">LinkedIn</a> || <a href="https://www.github.com/deawar" class="text-light">GitHub</a> || <a href="https://www.twitter.com/deawar" class="text-light">Twitter</a> || <a href="https://www.reddit.com/user/deawar" class="text-light">Reddit</a>
+          <p class="card-text"><a href="mailto:deawar@gmail.com" class="text-light">Deawar@gmail.com</a></p> 
+          <a href="./Assets/Dean WarrenResumeApr20.pdf" class="btn btn-primary">Resume</a>
+        </div>
+        </div>
+      </div>  
     </div>
   </div>
 
