--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,9 @@
     
       <div class="container py-4 mx-auto">
         <div class="row">
+          <h3 class="m-3 py-4mx-auto">My Goals: </h3>
+          <p class="m-3 py-4mx-auto">I am a Fullstack Developer/Designer using JavaScript, CSS, HTML, Bootstrap, Bulma, Materilize, Node.js and Express.js to design your next “Killer Application”. I have a strong goal focus especially when working towards a coding milestone. My  love of problem solving  is surpassed only by my passion to code. I live to troubleshoot and make my projects better. I always make my customer’s issues MY issues and I will work to find a solution that satisfies the customer. 
+            My work ethic is contagious and I often see team members attempting to match my effort. I have an innate skill for seeing and understanding my teams strengths and helping them to work to those strengths. I have a certificate in FullStack Web Developement from the Georgia Institute of Technology. I will be an asset to your team. Let's <a href="./contact.html" class="link">connect!</a></p>
           <div class="col-xs-8">
             <div class="m-3 card mx-auto">
               <div class="card-header"><h4>Portfolio</h4></div>
@@ -58,18 +61,18 @@
                   <div class="row mb-2">
                     <div class="mb-4 col-md-6">
                       <img src="./Assets/Images/jspasswordgen.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Woman hugging Huge tree">
-                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/jspassword_generator/">Password Generator App</a></span>
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/jspassword_generator/" class="text-light">Password Generator App</a></span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/05-third-party-apis-homework-demo.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="BlueGlass Swirl Sculpture">
-                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/Work-DayScheduler/">Work Day Scheduler</a></span>
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/Work-DayScheduler/" class="text-light">Work Day Scheduler</a></span>
                     </div>
                   </div>
                   <!-- 2nd row -->
                   <div class="row mb-2">
                     <div class="mb-4 col-md-6">
                       <img src="./Assets/Images/RainChk.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top" alt="Cow with Cross in the background">
-                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://itsjonkelley.github.io/RainChk/">RainChk</a></span>
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://itsjonkelley.github.io/RainChk/"class="text-light" >RainChk</a></span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/Ireland_bathouse.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Old Irish Guardhouse">
@@ -80,7 +83,7 @@
                   <div class="row">
                     <div class="mb-4 col-md-6">
                       <img src="./Assets/Images/06-server-side-apis-homework-demo.png" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
-                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/MultiCityWeather/">Weather Dashboard App</a></span>
+                      <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/MultiCityWeather/"class="text-light" >Weather Dashboard App</a></span>
                     </div>
                     <div class="col-md-6">
                       <img src="./Assets/Images/IrelandBurialMound.jpg" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Irish Burial Mound">
