changed Weather Gif

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                   <!-- 3rd row -->
                   <div class="row">
                     <div class="mb-4 col-md-6">
-                      <img src="./Assets/Images/06-server-side-apis-homework-demo.png" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
+                      <img src="./Assets/Images/MultiCityWeather.gif" class="m-p-2 m-4 mx-sm-0 rounded float-left"width="220" height="180" class="d-inline-block align-top"  alt="Pasture with a barbedwire fence">
                       <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/MultiCityWeather/"class="text-light" >Weather Dashboard App</a></span>
                     </div>
                     <div class="col-md-6">
