--- a/portfolio.html
+++ b/portfolio.html
@@ -16,25 +16,28 @@
 <body class="portfolio">
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="d-inline p-2 bg-dark text-white"></div> 
-    <a href="#" class="navbar-brand"><h2>Dean Warren</h2></a>
+    <div class="d-inline p-2 bg-dark text-white"></div>
+    <a href="#" class="navbar-brand">
+      <h2>Dean Warren</h2>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="main-navigation">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/deawar">
-          <span class="fa fa-twitter" style="color:rgb(0, 153, 255);" ></span>
-        </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/dean-warren-ab01468/">
-          <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);" ></span>
-        </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
-          <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
-        </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar">
-          <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
-        </a></i></li>
+        <li class="nav-item"> <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/deawar">
+            <span class="fa fa-twitter" style="color:rgb(0, 153, 255);"></span>
+          </a></i></li>
+        <li class="nav-item"> <a class="btn btn-block btn-social btn-linkedin"
+            href="https://www.linkedin.com/in/dean-warren-ab01468/">
+            <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);"></span>
+          </a></i></li>
+        <li class="nav-item"> <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
+            <span class="fa fa-github" style="color:rgb(240, 242, 247);"></span>
+          </a></i></li>
+        <li class="nav-item"> <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar">
+            <span class="fa fa-reddit" style="color:rgb(238, 73, 8);"></span>
+          </a></i></li>
         <li class="nav-item">
           <a href="./index.html" class="nav-link">About</a>
         </li>
@@ -93,8 +96,8 @@
           <!-- 2nd row -->
           <div class="row mb-2 ">
             <div class="card">
-              <img src="./Assets/Images/RainChk.gif" class="m-4 p-2 mx-sm-0 rounded float-left" width="380"
-                height="380" class="d-inline-block align-top" alt="Cow with Cross in the background">
+              <img src="./Assets/Images/RainChk.gif" class="m-4 p-2 mx-sm-0 rounded float-left" width="380" height="380"
+                class="d-inline-block align-top" alt="Cow with Cross in the background">
               <span class="d-block p-1 rounded bg-dark text-white"><a href="https://itsjonkelley.github.io/RainChk/"
                   class="text-light">RainChk</a></span>
             </div>
@@ -106,7 +109,22 @@
                   App</a></span>
             </div>
           </div>
-
+          <!-- 3rd row -->
+          <div class="row mb-2 ">
+            <div class="card">
+              <img src="./Assets/Images/ReadMeGen.gif" class="m-4 p-2 mx-sm-0 rounded float-left" width="380" height="380"
+                class="d-inline-block align-top" alt="CLI ReadMe Generator">
+              <span class="d-block p-1 rounded bg-dark text-white"><a href="https://github.com/deawar/readMeGen/"
+                  class="text-light">Node.js CLI ReadMeGen</a></span>
+            </div>
+            <div class="card">
+              <img src="./Assets/Images/noteTaker.gif" class="m-4 p-2 mx-sm-0 rounded float-left" width="380"
+                height="380" class="d-inline-block align-top" alt="node based Note Taking app">
+              <span class="d-block p-1 rounded bg-dark text-white"><a href="https://still-headland-57233.herokuapp.com/"
+                  class="text-light">Node.js based noteTaker
+                  App</a></span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -146,4 +164,5 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
