added Resume button

--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -32,7 +32,7 @@
           <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="./portfolio.html" class="nav-link">Portfolio</a>
+          <a href="#portfolio" class="nav-link">Portfolio</a>
         </li>
         <li class="nav-item">
           <a href="#footer" class="nav-link">Contact</a>
@@ -55,7 +55,7 @@
           <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="./portfolio.html" class="nav-link">Portfolio</a>
+          <a href="#portfolio" class="nav-link">Portfolio</a>
         </li>
         <li><a href="#footer" class="nav-link">Contact</a>
       </ul>
@@ -108,7 +108,7 @@
 
   <div class="container">
     <div class="section">
-      <h4 class="center">Portfolio</h4>
+      <h4 class="center" id="portfolio">Portfolio</h4>
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
@@ -172,7 +172,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Web Based NoteTaker</h5>
             <img src="../Assets/Images/noteTaker.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"><a href="https://still-headland-57233.herokuapp.com/"
@@ -192,6 +192,9 @@
         <div class="row center">
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
+        <div class="row center">
+          <a href="../Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">See Resume</a>
+        </div>
       </div>
     </div>
     <div class="parallax"><img src="../Assets/Images/Whitwell1.png" alt="Unsplashed background img 3"></div>
@@ -202,7 +205,7 @@
       <div class="row">
         <div class="col l6 s12">
           <img src="../Assets/Images/SSCC-2-275x198.png" width="120" height="65"alt="Unsplashed background img 1"><h5 class="white-text">Standing Stone Computer Consulting, LLC</h5>
-          <p class="grey-text text-lighten-4">We are a team of highly experienced Techncial professionals working to make technology work for you. If it causes you frustration we are here to help. We build websites and mobile apps. We can perform security audits and let you know where your network is most vulnerable. Contact us today and let us know how we can help make technology work for you!</p>
+          <p class="grey-text text-lighten-4">A team of highly experienced Techncial professionals working to make technology work for you. If it causes you frustration we are here to help. We build websites and mobile apps. We can perform security audits and let you know where your network is most vulnerable. Contact us today and let us know how we can help make technology work for you!</p>
 
 
         </div>
@@ -212,7 +215,7 @@
           <ul>
             <li><a class="white-text" href="#!">Review our work</a></li>
             <li><a class="white-text" href="#about">About Dean</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#portfolio">Portfolio</a></li>
             <!-- <li><a class="white-text" href="#!">Link 4</a></li> -->
           </ul>
         </div>
