--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -99,7 +99,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light flow-text">A modern developer familiar with several front-end frameworks such as Bulma, Bootstrap and Materialize. Dean is also skilled in Backend Design and Implimentation. Dean has managed his own websites hosted on both remote and on premis hardware. Dean is a skilled network engineer.</h5>
+          <h5 class="header col s12 light flow-text">A modern developer familiar with several front-end frameworks such as Bulma, Bootstrap and Materialize. Dean is also skilled in Backend Design and Implimentation. He has managed his own websites hosted on both remote and on premis hardware and is a skilled network engineer.</h5>
         </div>
       </div>
     </div>
@@ -115,8 +115,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">enhanced_encryption</i></h2>
             <h5 class="center">JavaScript Password Generator</h5>
-            <img src="../Assets/Images/jspasswordgen.gif" width="380" height="380" alt="Password Generator" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a
+            <a href="https://deawar.github.io/jspassword_generator/"><img src="../Assets/Images/jspasswordgen.gif" width="380" height="380" alt="Password Generator" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a
               href="https://deawar.github.io/jspassword_generator/" class="text-light">Password Generator
               App</a></span>
             <p class="light">Have you ever needed to generate a random password with multiple charaters for your favorite website? This app can do that for you quickly and easily. Additionally, there is a convienent Copy button once you have a password that meets your needs.</p>
@@ -127,8 +127,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Work Day Scheduler</h5>
-            <img src="../Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a href="https://deawar.github.io/Work-DayScheduler/"
+            <a href="https://deawar.github.io/Work-DayScheduler/"><img src="../Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://deawar.github.io/Work-DayScheduler/"
               class="text-light">Work Day Scheduler</a></span>
             <p class="light">The Work Day Scheduler Application makes planning your day a breeze. This timed ToDo app will help you get a handle on your day by breaking up your tasklist into an hourly schedule.</p>
             
@@ -139,8 +139,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">wb_sunny</i></h2>
             <h5 class="center">RainChk</h5>
-            <img src="../Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a href="https://itsjonkelley.github.io/RainChk/"
+            <a href="https://itsjonkelley.github.io/RainChk/"><img src="../Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://itsjonkelley.github.io/RainChk/"
               class="text-light">RainChk</a></span>
               <p class="light">RainChk Scheduler assist with planning while making sure the weather is considered..</p>
           </div>
@@ -151,9 +151,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">MultiCityWeather</h5>
-            <img src="../Assets/Images/MultiCityWeather.gif" width="380" height="380" alt="MultiCityWeather" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a
-              href="https://deawar.github.io/MultiCityWeather/" class="text-light">MultiCityWeather
+            <a href="https://deawar.github.io/MultiCityWeather/"><img src="../Assets/Images/MultiCityWeather.gif" width="380" height="380" alt="MultiCityWeather" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://deawar.github.io/MultiCityWeather/" class="text-light">MultiCityWeather
               App</a></span>
             <p class="light">Have you ever needed to see what the weather will be like in several cities in a given week? Will this is what MultiCityWeather was designed for. This app can do that for you quickly and easily.</p>
           </div>
@@ -163,8 +162,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">code</i></h2>
             <h5 class="center">Node.js CLI ReadMeGen</h5>
-            <img src="../Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a href="https://github.com/deawar/readMeGen/"
+            <a href="https://github.com/deawar/readMeGen/"><img src="../Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://github.com/deawar/readMeGen/"
               class="text-light">Node.js CLI ReadMeGen</a></span>
             <p class="light">A tool for the busy developer, ReadMe Gen is a Node JS CLI tool to quickly render a ReadMe to include in your GitHub repository that will include your collaborators, modules dependencies, and include at least one badge in your ReadMe. This program will also prompt you for a license for your project.</p>
           </div>
@@ -174,8 +173,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Web Based NoteTaker</h5>
-            <img src="../Assets/Images/noteTaker.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"><a href="https://still-headland-57233.herokuapp.com/"
+            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/noteTaker.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://still-headland-57233.herokuapp.com/"
               class="text-light">Node.js based noteTaker
               App</a></span>
             <p class="light">Another Node JS based tool that allows the busy user to make notes available anywhere on their local network.This app uses persistant storage to keep track of the user's information.</p>
@@ -190,7 +189,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Dean is a Full Stack Developer Ready to Build your next "Killer Application".</h5>
         </div>
         <div class="row center">
           <a href="../Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">See Resume</a>
