--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -14,18 +14,18 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#footer" class="brand-logo">SSCC</a>
+      <a id="logo-container" href="#footer" class="brand-logo">Dean Warren</a>
       <ul class="right hide-on-med-and-down">
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" href="https://www.twitter.com/deawar" style="margin-top:10px;">
           <span class="fa fa-twitter" style="color:rgb(0, 47, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/dean-warren-ab01468/">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/dean-warren-ab01468/" style="margin-top:10px;">
           <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" href="https://www.github.com/deawar" style="margin-top:10px;">
           <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" href="https://www.reddit.com/user/deawar" style="margin-top:10px;">
           <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
         </a></i></li>
         <li class="nav-item">
@@ -69,7 +69,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-4">Dean Warren's Portfolio Page</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern portfolio based on Dean's Design Work</h5>
+          <h5 class="header col s12 light">A portfolio of Dean's Design Work</h5>
         </div>
         <div class="row center">
           <a href="#footer" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get In Touch</a>
@@ -88,7 +88,8 @@
         <div class="col s12 center" id="#about">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
-          <p class="left-align light flow-text">Dean Warren is a full stack developer with an extensive background in hardware and software. He has been building custom PC's and networking solutions since 1995 when he ran the The Shadowlands BBS in Macon, Ga. He has been a field tech, an operations manager, a level III customer service liason, an account manager of IT services for a major printing manufacturer and a Clinical Nursing Informaticist on a number of new end to end software installations.</p>
+          
+          <a href="#footer"><img src="../Assets/Images/IMG_5125.png" width="120" height="150" alt="headshot of Dean Warren" style="border-radius:5px; margin-right:8px;" class="left hoverable"></a><p class="left-align light flow-text">Dean Warren is a full stack developer with an extensive background in hardware and software. He has been building custom PC's and networking solutions since 1995 when he ran the The Shadowlands BBS in Macon, Ga. He has been a field tech, an operations manager, a level III customer service liason, an account manager of IT services for a major printing manufacturer and a Clinical Nursing Informaticist on a number of new end to end software installations.</p>
           <p>Dean's other life experiences include an education and career spanning 28 years in the field of nursing which included 10 years working in a level three trauma center, a year in a diagnostic cardiac cath lab and 4 years working as a crictical care transport RN. Dean's hobbies include exercising, running, yoga, and building DIY projects using Raspberry Pi's. Dean has been an avid paraglider pilot and has traveled extensively throughout Central and South America to fly.</p>
         </div>
       </div>
@@ -99,7 +100,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light flow-text">A modern developer familiar with several front-end frameworks such as Bulma, Bootstrap and Materialize. Dean is also skilled in Backend Design and Implimentation. He has managed his own websites hosted on both remote and on premis hardware and is a skilled network engineer.</h5>
+          <h5 class="header col s12 light flow-text">Javascript || Node JS || jQuery || CSS || HTML5 || MySQL || Mongo DB || React Native<br>  A modern developer familiar with several front-end frameworks such as Bulma, Bootstrap and Materialize. Dean is also skilled in Backend Design and Implimentation. He has managed his own websites hosted on both remote and on premis hardware and is a skilled network engineer.</h5>
         </div>
       </div>
     </div>
@@ -178,6 +179,43 @@
               class="text-light">Node.js based noteTaker
               App</a></span>
             <p class="light">Another Node JS based tool that allows the busy user to make notes available anywhere on their local network.This app uses persistant storage to keep track of the user's information.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 3rd Row -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">fitness_center</i></h2>
+            <h5 class="center">Fitness Tracker</h5>
+            <a href="https://cryptic-tor-43629.herokuapp.com/"><img src="../Assets/Images/FitnessTracker8mb.gif" width="380" height="380" alt="Fitness Tracker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://cryptic-tor-43629.herokuapp.com/" class="text-light">Fitness Tracker
+              App</a></span>
+            <p class="light">A basic fullstack app that uses Mongo DB and Mongoose. Built in Node JS and deployed on Heroku.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">food_bank</i></h2>
+            <h5 class="center">Da MVC Burger App!</h5>
+            <a href="https://da-burger-app2020.herokuapp.com/"><img src="../Assets/Images/Da MVC Burger App!_.gif" width="380" height="380" alt="Da MVC Burger App!" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://da-burger-app2020.herokuapp.com/"
+              class="text-light">Da MVC Burger App!</a></span>
+            <p class="light">This fun app demonstrates MVC principles and uses MySql as a backend. Plus just look at the fun creative frontend interface. This learning project was a MySQL learning bonanza!</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">brush</i></h2>
+            <h5 class="center">Silent Auction Gallary</h5>
+            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/SilentAuctionGallery-min.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://still-headland-57233.herokuapp.com/"
+              class="text-light">Silent Auction Gallary
+              App</a></span>
+            <p class="light">Node JS based tool to allows the busy user to make notes available anywhere on their local network.This app uses persistant storage to keep track of the user's information.</p>
           </div>
         </div>
       </div>
