--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -116,7 +116,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">enhanced_encryption</i></h2>
             <h5 class="center">JavaScript Password Generator</h5>
-            <a href="https://deawar.github.io/jspassword_generator/"><img src="../Assets/Images/jspasswordgen.gif" width="380" height="380" alt="Password Generator" class="responsive">
+            <a href="https://deawar.github.io/jspassword_generator/"><img src="../Assets/Images/jspasswordgen.webp" width="380" height="380" alt="Password Generator" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a
               href="https://deawar.github.io/jspassword_generator/" class="text-light">Password Generator
               App</a></span>
@@ -152,7 +152,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">MultiCityWeather</h5>
-            <a href="https://deawar.github.io/MultiCityWeather/"><img src="../Assets/Images/MultiCityWeather.gif" width="380" height="380" alt="MultiCityWeather" class="responsive">
+            <a href="https://deawar.github.io/MultiCityWeather/"><img src="../Assets/Images/MultiCityWeather.webp" width="380" height="380" alt="MultiCityWeather" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://deawar.github.io/MultiCityWeather/" class="text-light">MultiCityWeather
               App</a></span>
             <p class="light">Have you ever needed to see what the weather will be like in several cities in a given week? Will this is what MultiCityWeather was designed for. This app can do that for you quickly and easily.</p>
@@ -174,7 +174,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Web Based NoteTaker</h5>
-            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/noteTaker.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/noteTaker.webp" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://still-headland-57233.herokuapp.com/"
               class="text-light">Node.js based noteTaker
               App</a></span>
