--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="../Assets/Images/PB190257.webp" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="./Assets/Images/PB190257.webp" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -89,7 +89,7 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
           
-          <a href="#footer"><img src="../Assets/Images/IMG_5125.png" width="120" height="150" alt="headshot of Dean Warren" style="border-radius:5px; margin-right:8px;" class="left hoverable"></a><p class="left-align light flow-text">Dean Warren is a full stack developer with an extensive background in hardware and software. He has been building custom PC's and networking solutions since 1995 when he ran the The Shadowlands BBS in Macon, Ga. He has been a field tech, an operations manager, a level III customer service liason, an account manager of IT services for a major printing manufacturer and a Clinical Nursing Informaticist on a number of new end to end software installations.</p>
+          <a href="#footer"><img src="./Assets/Images/IMG_5125.png" width="120" height="150" alt="headshot of Dean Warren" style="border-radius:5px; margin-right:8px;" class="left hoverable"></a><p class="left-align light flow-text">Dean Warren is a full stack developer with an extensive background in hardware and software. He has been building custom PC's and networking solutions since 1995 when he ran the The Shadowlands BBS in Macon, Ga. He has been a field tech, an operations manager, a level III customer service liason, an account manager of IT services for a major printing manufacturer and a Clinical Nursing Informaticist on a number of new end to end software installations.</p>
           <p>Dean's other life experiences include an education and career spanning 28 years in the field of nursing which included 10 years working in a level three trauma center, a year in a diagnostic cardiac cath lab and 4 years working as a crictical care transport RN. Dean's hobbies include exercising, running, yoga, and building DIY projects using Raspberry Pi's. Dean has been an avid paraglider pilot and has traveled extensively throughout Central and South America to fly.</p>
         </div>
       </div>
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../Assets/Images/Whitwell 2.png" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="./Assets/Images/Whitwell 2.png" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -116,7 +116,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">enhanced_encryption</i></h2>
             <h5 class="center">JavaScript Password Generator</h5>
-            <a href="https://deawar.github.io/jspassword_generator/"><img src="../Assets/Images/jspasswordgen.webp" width="380" height="380" alt="Password Generator" class="responsive">
+            <a href="https://deawar.github.io/jspassword_generator/"><img src="./Assets/Images/jspasswordgen.webp" width="380" height="380" alt="Password Generator" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a
               href="https://deawar.github.io/jspassword_generator/" class="text-light">Password Generator
               App</a></span>
@@ -128,7 +128,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Work Day Scheduler</h5>
-            <a href="https://deawar.github.io/Work-DayScheduler/"><img src="../Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
+            <a href="https://deawar.github.io/Work-DayScheduler/"><img src="./Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://deawar.github.io/Work-DayScheduler/"
               class="text-light">Work Day Scheduler</a></span>
             <p class="light">The Work Day Scheduler Application makes planning your day a breeze. This timed ToDo app will help you get a handle on your day by breaking up your tasklist into an hourly schedule.</p>
@@ -140,7 +140,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">wb_sunny</i></h2>
             <h5 class="center">RainChk</h5>
-            <a href="https://itsjonkelley.github.io/RainChk/"><img src="../Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
+            <a href="https://itsjonkelley.github.io/RainChk/"><img src="./Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://itsjonkelley.github.io/RainChk/"
               class="text-light">RainChk</a></span>
               <p class="light">RainChk Scheduler assist with planning while making sure the weather is considered..</p>
@@ -152,7 +152,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">MultiCityWeather</h5>
-            <a href="https://deawar.github.io/MultiCityWeather/"><img src="../Assets/Images/MultiCityWeather.webp" width="380" height="380" alt="MultiCityWeather" class="responsive">
+            <a href="https://deawar.github.io/MultiCityWeather/"><img src="./Assets/Images/MultiCityWeather.webp" width="380" height="380" alt="MultiCityWeather" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://deawar.github.io/MultiCityWeather/" class="text-light">MultiCityWeather
               App</a></span>
             <p class="light">Have you ever needed to see what the weather will be like in several cities in a given week? Will this is what MultiCityWeather was designed for. This app can do that for you quickly and easily.</p>
@@ -163,7 +163,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">code</i></h2>
             <h5 class="center">Node.js CLI ReadMeGen</h5>
-            <a href="https://github.com/deawar/readMeGen/"><img src="../Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
+            <a href="https://github.com/deawar/readMeGen/"><img src="./Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://github.com/deawar/readMeGen/"
               class="text-light">Node.js CLI ReadMeGen</a></span>
             <p class="light">A tool for the busy developer, ReadMe Gen is a Node JS CLI tool to quickly render a ReadMe to include in your GitHub repository that will include your collaborators, modules dependencies, and include at least one badge in your ReadMe. This program will also prompt you for a license for your project.</p>
@@ -174,7 +174,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Web Based NoteTaker</h5>
-            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/noteTaker.webp" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <a href="https://still-headland-57233.herokuapp.com/"><img src="./Assets/Images/noteTaker.webp" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://still-headland-57233.herokuapp.com/"
               class="text-light">Node.js based noteTaker
               App</a></span>
@@ -189,7 +189,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">fitness_center</i></h2>
             <h5 class="center">Fitness Tracker</h5>
-            <a href="https://cryptic-tor-43629.herokuapp.com/"><img src="../Assets/Images/FitnessTracker8mb.gif" width="380" height="380" alt="Fitness Tracker" class="responsive">
+            <a href="https://cryptic-tor-43629.herokuapp.com/"><img src="./Assets/Images/FitnessTracker8mb.gif" width="380" height="380" alt="Fitness Tracker" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://cryptic-tor-43629.herokuapp.com/" class="text-light">Fitness Tracker
               App</a></span>
             <p class="light">A basic fullstack app that uses Mongo DB and Mongoose. Built in Node JS and deployed on Heroku.</p>
@@ -200,7 +200,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">food_bank</i></h2>
             <h5 class="center">Da MVC Burger App!</h5>
-            <a href="https://da-burger-app2020.herokuapp.com/"><img src="../Assets/Images/Da MVC Burger App!_.gif" width="380" height="380" alt="Da MVC Burger App!" class="responsive">
+            <a href="https://da-burger-app2020.herokuapp.com/"><img src="./Assets/Images/Da MVC Burger App!_.gif" width="380" height="380" alt="Da MVC Burger App!" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://da-burger-app2020.herokuapp.com/"
               class="text-light">Da MVC Burger App!</a></span>
             <p class="light">This fun app demonstrates MVC principles and uses MySql as a backend. Plus just look at the fun creative frontend interface. This learning project was a MySQL learning bonanza!</p>
@@ -211,7 +211,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">brush</i></h2>
             <h5 class="center">Silent Auction Gallary</h5>
-            <a href="https://still-headland-57233.herokuapp.com/"><img src="../Assets/Images/SilentAuctionGallery-min.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <a href="https://still-headland-57233.herokuapp.com/"><img src="./Assets/Images/SilentAuctionGallery-min.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a href="https://still-headland-57233.herokuapp.com/"
               class="text-light">Silent Auction Gallary
               App</a></span>
@@ -230,18 +230,18 @@
           <h5 class="header col s12 light">Dean is a Full Stack Developer Ready to Build your next "Killer Application".</h5>
         </div>
         <div class="row center">
-          <a href="../Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">See Resume</a>
+          <a href="./Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">See Resume</a>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../Assets/Images/Whitwell1.png" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="./Assets/Images/Whitwell1.png" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <img src="../Assets/Images/SSCC-2-275x198.png" width="120" height="65"alt="Unsplashed background img 1"><h5 class="white-text">Standing Stone Computer Consulting, LLC</h5>
+          <img src="./Assets/Images/SSCC-2-275x198.png" width="120" height="65"alt="Unsplashed background img 1"><h5 class="white-text">Standing Stone Computer Consulting, LLC</h5>
           <p class="grey-text text-lighten-4">A team of highly experienced Techncial professionals working to make technology work for you. If it causes you frustration we are here to help. We build websites and mobile apps. We can perform security audits and let you know where your network is most vulnerable. Contact us today and let us know how we can help make technology work for you!</p>
 
 
