--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <h5 class="header col s12 light">Dean is a Full Stack Developer ready to build your next "Killer Application".</h5>
         </div>
         <div class="row center">
-          <a target="_blank" rel="nopener noreferrer" href="./Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1 hoverable">See Resume</a>
+          <a target="_blank" rel="nopener noreferrer" href="./Assets/Dean WarrenResumeJuly20.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1 hoverable">See Resume</a>
         </div>
       </div>
     </div>
